# ghg_emission_forecast

./: README.md  climate-change-prediction.ipynb  country_ghg_forecast_2024_2028.csv  country_model_evaluation.csv  forecast_pipeline.py  ghg_emission_forecast_kaggle.ipynb  pyproject.toml
data_effect_climate_change/: OWID_CB_PRIMARY_ENERGY_CONSUMPTION_WIDEF.csv  OWID_CB_TOTAL_GHG_WIDEF.ods  WB_CCKP_TAS_WIDEF.csv  WB_SE4ALL_EG_FCON_RNEW_WIDEF.csv  WB_WDI_AG_LND_FRST_ZS_WIDEF.csv  WB_WDI_NY_GDP_PCAP_KN_WIDEF.csv
